--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb active">
 				<div class="item-wrapper">
 					<div class="title mb-3">
-						<h3 class="count mbr-fonts-style display-1">+6000</h3>
+						<h3 class="count mbr-fonts-style display-1">+6500</h3>
 					</div>
 					<h4 class="card-title mbr-fonts-style display-7">
 						<strong>Seguidores</strong></h4>
@@ -73,7 +73,7 @@
 				<div class="item-wrapper">
 					<div class="title mb-3">
 						<h3 class="count mbr-fonts-style display-1">
-							+19300</h3>
+							+28600</h3>
 					</div>
 					<h4 class="card-title mbr-fonts-style display-7"><p><strong>Seguidores</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h4>
 					<p class="mbr-text card-text mbr-fonts-style mb-0 display-7">
@@ -85,7 +85,7 @@
 					<div class="title mb-3">
 						<h3 class="count mbr-fonts-style display-2">4&nbsp;</h3>
 					</div>
-					<h4 class="card-title mbr-fonts-style display-5">En 4 plataformas simultaneas</h4>
+					<h4 class="card-title mbr-fonts-style display-5">Stream En 4 plataformas simultaneas</h4>
 					<p class="mbr-text card-text mbr-fonts-style mb-0 display-7">Youtube / Twitch / Kick / Tik Tok</p>
 				</div>
 			</div>
