--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 						
 					</div>
 				</div>
-			</div><div class="item features-without-image col-12 col-md-6 col-lg-4">
+			</div>
+			<div class="item features-without-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
 					<a href="https://www.tiktok.com/@kellypop88"><span class="mbr-iconfont m-auto socicon-tiktok socicon"></span></a>
 					<div class="card-box">
@@ -210,6 +211,17 @@
 			
 		</div>
 	</div>
+	<div class="item features-without-image col-12 col-md-6 col-lg-4">
+				<div class="item-wrapper">
+					<a href="https://x.com/KellypopC47483"><span class="mbr-iconfont m-auto socicon-x socicon"></span></a>
+					<div class="card-box">
+						<h4 class="card-title mbr-fonts-style mb-1 display-7">
+							<strong>X</strong>
+						</h4>
+						
+					</div>
+				</div>
+			</div>
 </section>
 	<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
