--- a/index.html
+++ b/index.html
@@ -208,12 +208,10 @@
 					</div>
 				</div>
 			</div>
-			
-		</div>
-	</div>
-	<div class="item features-without-image col-12 col-md-6 col-lg-4">
+
+			<div class="item features-without-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
-					<a href="https://x.com/KellypopC47483"><span class="mbr-iconfont m-auto socicon-x socicon"></span></a>
+					<a href="https://x.com/KellypopC47483"><span class="mbr-iconfont m-auto socicon-twitter socicon"></span></a>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
 							<strong>X</strong>
@@ -222,6 +220,10 @@
 					</div>
 				</div>
 			</div>
+			
+		</div>
+	</div>
+	
 </section>
 	<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/vimeoplayer/player.js"></script>  <script src="assets/viewportchecker/viewportchecker.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
   
