--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 				</div>
 			</div><div class="item features-without-image col-12 col-md-6 col-lg-4">
 				<div class="item-wrapper">
-					<a href="https://www.instagram.com/kellypop88/"><span class="mbr-iconfont m-auto socicon-instagram socicon"></span></a>
+					<a href="https://www.instagram.com/kellypop_88/"><span class="mbr-iconfont m-auto socicon-instagram socicon"></span></a>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
 							<strong>Instagram</strong>
