--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<div class="item features-without-image col-12 col-md-6 col-lg-4 item-mb active">
 				<div class="item-wrapper">
 					<div class="title mb-3">
-						<h3 class="count mbr-fonts-style display-1">+6500</h3>
+						<h3 class="count mbr-fonts-style display-1">+11000</h3>
 					</div>
 					<h4 class="card-title mbr-fonts-style display-7">
 						<strong>Seguidores</strong></h4>
@@ -98,7 +98,7 @@
 				<div class="item-wrapper">
 					<div class="title mb-3">
 						<h3 class="count mbr-fonts-style display-1">
-							+30000</h3>
+							+72000</h3>
 					</div>
 					<h4 class="card-title mbr-fonts-style display-7"><p><strong>Seguidores</strong>&nbsp;&nbsp;&nbsp;&nbsp;</p></h4>
 					<p class="mbr-text card-text mbr-fonts-style mb-0 display-7">
@@ -110,8 +110,8 @@
 					<div class="title mb-3">
 						<h3 class="count mbr-fonts-style display-2">4&nbsp;</h3>
 					</div>
-					<h4 class="card-title mbr-fonts-style display-5">Stream En 4 plataformas simultaneas</h4>
-					<p class="mbr-text card-text mbr-fonts-style mb-0 display-7">Youtube / Twitch / Kick / Tik Tok</p>
+					<h4 class="card-title mbr-fonts-style display-5">Stream En 3 plataformas simultaneas</h4>
+					<p class="mbr-text card-text mbr-fonts-style mb-0 display-7">Youtube / Twitch / Kick</p>
 				</div>
 			</div>
 
