--- a/index.html
+++ b/index.html
@@ -122,7 +122,60 @@
 
 
 <section>
+	<div class="container my-5">
+		<div id="carouselExample" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="2000">
+		  <div class="carousel-inner rounded shadow">
+	
+			<!-- Imagen 1 -->
+			<div class="carousel-item active">
+			  <img src="assets\images\ChatGPT Image 22 abr 2025, 11_04_28.png" class="d-block w-100" alt="Imagen 1">
+			</div>
+	
+			<!-- Imagen 2 -->
+			<div class="carousel-item">
+			  <img src="assets\images\ChatGPT Image 22 abr 2025, 11_05_32.png" class="d-block w-100" alt="Imagen 2">
+			</div>
+	
+			<!-- Imagen 3 -->
+			<div class="carousel-item">
+			  <img src="assets\images\ChatGPT Image 22 abr 2025, 11_07_41.png" class="d-block w-100" alt="Imagen 3">
+			</div>
+	
+			<!-- Imagen 4 -->
+			<div class="carousel-item">
+			  <img src="assets\images\ChatGPT Image 22 abr 2025, 11_09_21.png" class="d-block w-100" alt="Imagen 4">
+			</div>
+	
+			<!-- Imagen 5 -->
+			<div class="carousel-item">
+			  <img src="assets\images\ChatGPT Image 22 abr 2025, 11_09_39.png" class="d-block w-100" alt="Imagen 5">
+			</div>
 
+			<!-- Imagen 6 -->
+			<div class="carousel-item">
+				<img src="assets\images\ChatGPT Image 22 abr 2025, 11_11_46.png" class="d-block w-100" alt="Imagen 6">
+			  </div>
+
+			  <!-- Imagen 7 -->
+			<div class="carousel-item">
+				<img src="assets\images\ChatGPT Image 22 abr 2025, 11_15_19.png" class="d-block w-100" alt="Imagen 7">
+			  </div>
+	
+		  </div>
+	
+		  <!-- Flechas opcionales -->
+		  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+			<span class="carousel-control-prev-icon"></span>
+		  </button>
+		  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+			<span class="carousel-control-next-icon"></span>
+		  </button>
+		</div>
+	  </div>
+	
+	  <!-- Bootstrap JS -->
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	
 
 </section>
 
@@ -237,7 +290,7 @@
 		  </div>
 	
 		  <div class="col-12 col-sm-6 col-lg-4">
-			<a href="https://kick.com/kellypop" target="_blank" class="item-link">
+			<a href="https://www.kick.com/kellypop" target="_blank" class="item-link">
 			  <div class="item-wrapper">
 				<span class="mbr-iconfont mobi-mbri-smile-face mobi-mbri fs-1 mb-2 d-block"></span>
 				<h4 class="card-title mbr-fonts-style mb-0 display-7"><strong>Kick</strong></h4>
@@ -246,7 +299,7 @@
 		  </div>
 	
 		  <div class="col-12 col-sm-6 col-lg-4">
-			<a href="https://x.com/KellypopC47483" target="_blank" class="item-link">
+			<a href="https://www.x.com/KellypopC47483" target="_blank" class="item-link">
 			  <div class="item-wrapper">
 				<span class="mbr-iconfont socicon-twitter socicon fs-1 mb-2 d-block"></span>
 				<h4 class="card-title mbr-fonts-style mb-0 display-7"><strong>X</strong></h4>
@@ -255,7 +308,7 @@
 		  </div>
 	
 		  <div class="col-12 col-sm-6 col-lg-4">
-			<a href="https://facebook.com/88kellypop" target="_blank" class="item-link">
+			<a href="https://www.facebook.com/88kellypop" target="_blank" class="item-link">
 			  <div class="item-wrapper">
 				<span class="mbr-iconfont socicon-facebook socicon fs-1 mb-2 d-block"></span>
 				<h4 class="card-title mbr-fonts-style mb-0 display-7"><strong>Facebook</strong></h4>
