--- a/index.html
+++ b/index.html
@@ -228,6 +228,48 @@
   </script>
   
 
+
+  <div class="kellypop-container">
+	<h2 class="kellypop-title">🎉 Canal KellyPop en tiempo real 🎥</h2>
+  
+	<div class="stat-box">
+	  <div class="stat-label">Suscriptores</div>
+	  <div class="stat-value" id="subscriber-count">Cargando...</div>
+	</div>
+  
+	<div class="stat-box">
+	  <div class="stat-label">Vistas Totales</div>
+	  <div class="stat-value" id="view-count">Cargando...</div>
+	</div>
+  </div>
+  
+  <script>
+	async function actualizarDatosCanal() {
+	  try {
+		const response = await fetch("https://www.googleapis.com/youtube/v3/channels?part=statistics&id=UCTSbayiFcHLcne-iFjNTD2w&key=AIzaSyCYi0jjMQsz33-y1veHpB9m-2V9_fDpEAY");
+		const data = await response.json();
+		const stats = data.items[0].statistics;
+		document.getElementById("subscriber-count").innerText = parseInt(stats.subscriberCount).toLocaleString("es-AR");
+		document.getElementById("view-count").innerText = parseInt(stats.viewCount).toLocaleString("es-AR");
+	  } catch (error) {
+		console.error("Error al obtener estadísticas del canal:", error);
+		document.getElementById("subscriber-count").innerText = "Error";
+		document.getElementById("view-count").innerText = "Error";
+	  }
+	}
+  
+	actualizarDatosCanal();
+	setInterval(actualizarDatosCanal, 15000); // cada 15 segundos
+  </script>
+
+<div class="sb-frame-wrapper">
+	<div class="sb-frame-crop">
+	  <iframe src="https://socialblade.com/tiktok/user/kellypop88" loading="lazy"></iframe>
+	</div>
+  </div>
+
+
+
 <a href="http://link.mercadopago.com.uy/kellypop" target="_blank" class="donate-banner">
 	¿Deseás ayudar el canal? <strong>¡Click aquí!</strong>
   </a>
